// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataTable renders column pivot header without offset when rollup is disabled 1`] = `
<div
  className="messages-container"
  style={
    Object {
      "height": "100%",
      "overflow": "auto",
    }
  }
>
  <table
    className="table table-condensed messages"
  >
    <thead>
      <tr>
        <th
          colSpan={1}
          style={
            Object {
              "left": "0px",
            }
          }
        >
          <span>
            <span
              className="dropdowntoggle"
              onClick={[Function]}
              role="presentation"
            >
              TCP
              <span
                className="caret"
              />
            </span>
          </span>
        </th>
        <th
          colSpan={1}
          style={
            Object {
              "left": "0px",
            }
          }
        >
          <span>
            <span
              className="dropdowntoggle"
              onClick={[Function]}
              role="presentation"
            >
              UDP
              <span
                className="caret"
              />
            </span>
          </span>
        </th>
      </tr>
      <tr>
        <th
          colSpan={1}
          style={
            Object {
              "left": "0px",
            }
          }
        >
          <span>
            <span
              className="dropdowntoggle"
              onClick={[Function]}
              role="presentation"
            >
              <span
                className="field-element  "
              >
                count()
              </span>
              <span
                className="caret"
              />
            </span>
          </span>
        </th>
        <th
          colSpan={1}
          style={
            Object {
              "left": "0px",
            }
          }
        >
          <span>
            <span
              className="dropdowntoggle"
              onClick={[Function]}
              role="presentation"
            >
              <span
                className="field-element  "
              >
                count()
              </span>
              <span
                className="caret"
              />
            </span>
          </span>
        </th>
      </tr>
    </thead>
    <tbody
      className="message-group"
    >
      <tr
        className="fields-row"
      >
        <td>
          <span>
            <span
              className="dropdowntoggle"
              onClick={[Function]}
              role="presentation"
            >
              239
              <span
                className="caret"
              />
            </span>
          </span>
        </td>
        <td>
          <span>
            <span
              className="dropdowntoggle"
              onClick={[Function]}
              role="presentation"
            >
              226
              <span
                className="caret"
              />
            </span>
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`DataTable should render with empty data 1`] = `
<div
  className="messages-container"
  style={
    Object {
      "height": "100%",
      "overflow": "auto",
    }
  }
>
  <table
    className="table table-condensed messages"
  >
    <thead>
      <tr />
    </thead>
  </table>
</div>
`;

exports[`DataTable should render with filled data with rollup 1`] = `
<div
  className="messages-container"
  style={
    Object {
      "height": "100%",
      "overflow": "auto",
    }
  }
>
  <table
    className="table table-condensed messages"
  >
    <thead>
      <tr>
        <th
          colSpan={2}
          style={
            Object {
              "left": "0px",
            }
          }
        />
        <th
          colSpan={1}
          style={
            Object {
              "left": "0px",
            }
          }
        >
          <span>
            <span
              className="dropdowntoggle"
              onClick={[Function]}
              role="presentation"
            >
              hulud.net
              <span
                className="caret"
              />
            </span>
          </span>
        </th>
      </tr>
      <tr>
        <th
          colSpan={
            Array [
              "timestamp",
            ]
          }
          style={
            Object {
              "left": "0px",
            }
          }
        >
          <span>
            <span
              className="dropdowntoggle"
              onClick={[Function]}
              role="presentation"
            >
              <span
                className="field-element  "
              >
                timestamp
              </span>
              <span
                className="caret"
              />
            </span>
          </span>
        </th>
        <th
          colSpan={
            Array [
              "count()",
            ]
          }
          style={
            Object {
              "left": "0px",
            }
          }
        >
          <span>
            <span
              className="dropdowntoggle"
              onClick={[Function]}
              role="presentation"
            >
              <span
                className="field-element  "
              >
                count()
              </span>
              <span
                className="caret"
              />
            </span>
          </span>
        </th>
        <th
          colSpan={1}
          style={
            Object {
              "left": "0px",
            }
          }
        >
          <span>
            <span
              className="dropdowntoggle"
              onClick={[Function]}
              role="presentation"
            >
              <span
                className="field-element  "
              >
                count()
              </span>
              <span
                className="caret"
              />
            </span>
          </span>
        </th>
      </tr>
    </thead>
    <tbody
      className="message-group"
    >
      <tr
        className="fields-row"
      >
        <td>
          <span>
            <span
              className="dropdowntoggle"
              onClick={[Function]}
              role="presentation"
            >
              2018-10-04T09:43:50.000Z
              <span
                className="caret"
              />
            </span>
          </span>
        </td>
        <td>
          <span>
            <span
              className="dropdowntoggle"
              onClick={[Function]}
              role="presentation"
            >
              408
              <span
                className="caret"
              />
            </span>
          </span>
        </td>
        <td>
          <span>
            <span
              className="dropdowntoggle"
              onClick={[Function]}
              role="presentation"
            >
              408
              <span
                className="caret"
              />
            </span>
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`DataTable should render with filled data without rollup 1`] = `
<div
  className="messages-container"
  style={
    Object {
      "height": "100%",
      "overflow": "auto",
    }
  }
>
  <table
    className="table table-condensed messages"
  >
    <thead>
      <tr>
        <th
          colSpan={1}
          style={
            Object {
              "left": "0px",
            }
          }
        />
        <th
          colSpan={1}
          style={
            Object {
              "left": "0px",
            }
          }
        >
          <span>
            <span
              className="dropdowntoggle"
              onClick={[Function]}
              role="presentation"
            >
              hulud.net
              <span
                className="caret"
              />
            </span>
          </span>
        </th>
      </tr>
      <tr>
        <th
          colSpan={
            Array [
              "timestamp",
            ]
          }
          style={
            Object {
              "left": "0px",
            }
          }
        >
          <span>
            <span
              className="dropdowntoggle"
              onClick={[Function]}
              role="presentation"
            >
              <span
                className="field-element  "
              >
                timestamp
              </span>
              <span
                className="caret"
              />
            </span>
          </span>
        </th>
        <th
          colSpan={1}
          style={
            Object {
              "left": "0px",
            }
          }
        >
          <span>
            <span
              className="dropdowntoggle"
              onClick={[Function]}
              role="presentation"
            >
              <span
                className="field-element  "
              >
                count()
              </span>
              <span
                className="caret"
              />
            </span>
          </span>
        </th>
      </tr>
    </thead>
    <tbody
      className="message-group"
    >
      <tr
        className="fields-row"
      >
        <td>
          <span>
            <span
              className="dropdowntoggle"
              onClick={[Function]}
              role="presentation"
            >
              2018-10-04T09:43:50.000Z
              <span
                className="caret"
              />
            </span>
          </span>
        </td>
        <td>
          <span>
            <span
              className="dropdowntoggle"
              onClick={[Function]}
              role="presentation"
            >
              408
              <span
                className="caret"
              />
            </span>
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
